2007-04-21  Kevin B. Kenny  <kennyb@acm.org>

	* generic/tclInt.decls:      Yet another round of attempting
	* generic/tclInt.h:          to get the correct type signature
	* unix/tclUnixPort.h:        for TclpLocaltime and TclpGmtime.
	* unix/tclUnixTime.c:        CONST TclpTime_t is a 'time_t *CONST'
	* win/tclWinTime.c:          and not a 'CONST time_t*'!
	* generic/tclIntDecls.h:     [Bug 1677275]
	* generic/tclIntPlatDecls.h: Regenerated.
	
2007-03-24  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* win/tclWinThrd.c: Thread exit handler marks the current 
	thread as un-initialized. This allows exit handlers that
	are registered later to re-initialize this subsystem in 
	case they need to use some sync primitives (cond variables)
	from this file again. 

2007-03-19  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclEvent.c (Tcl_CreateThread):	Replaced some calls to
	* generic/tclPkg.c (CheckVersion):	Tcl_Alloc() with calls to
	* unix/tclUnixTime.c (SetTZIfNecessary):	ckalloc(), which better
	* win/tclAppInit.c (setargv):	supports memory debugging.

2007-03-17  Kevin Kenny  <kennykb@acm.org>
	
	* win/tclWinReg.c (GetKeyNames): Size the buffer for enumerating
	key names correctly, so that Unicode names exceeding 127 chars
	can be retrieved without crashing. [Bug 1682211]
	* tests/registry.test (registry-4.9): Added test case for the
	above bug.

2007-03-13  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c (INST_FOREACH_STEP4):	Re-fetch pointers for
	* tests/foreach.test (foreach-10.1):	the value list each iteration
	of the loop as defense against shimmers.  [Bug 1671087]

	* generic/tclVar.c (TclArraySet):	Re-fetch pointers for the list
	* tests/var.test (var-17.1):	argument of [array set] each time
	through the loop as defense against possible shimmer issues.
	[Bug 1669489].

2007-03-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclCmdIL.c (Tcl_LsortObjCmd): Handle tricky case with loss